not to delete with build miss

--- a/texs/abstract_base.tex
+++ b/texs/abstract_base.tex
@@ -3,29 +3,26 @@
 %\usepackage{graphicx}% 必要に応じて
 %\usepackage{mysettings}% 自分用設定
 %-------------------
-\etitle{Decompiler for Machine Code using Neural Networks}
+\etitle{Neural Network based Decompiler for Machine Coding}
 \jtitle{ニューラルネットを用いた機械語のための逆コンパイラ}
 __NAMES__
 \date{December 11, 2018}
 %-------------------
 
-
 \begin{document}
 \begin{eabstract}
-A decompiler is a tool which aims to recover source code from compiled binary data.
-There are various decompilers, but they often output source code that is not quite intelligible to humans. 
-Therefore, we tried to apply machine translantion techniques to generate human intelligible decompiled source code. 
-In this paper, we used Recurrent Neural Networks with Attention, which is useful for machine translation. 
-We made training and test data by collecting source code from open source projects and compiled them to generate source code and binary pairs. 
-Then we trained neural networks by using the pairs, and evaluated the effectiveness of the method.
+A decompiler is a tool for recovering a source code from compiled binary data.
+There are various decompilers, but they often output a source code that is not intelligible to humans. 
+In this thesis, we tried to apply machine translation techniques to generate human intelligible decompiled source codes. 
+More specifically, we propose to use recurrent neural networks with attention, which are useful for machine translation. 
+In experiments, we use source codes collected from open source projects and their binary data for training and evaluating the neural networks.
 \end{eabstract}
 \begin{jabstract}
 逆コンパイラはコンパイル後のバイナリデータからソースコードを復元するためのツールである。
-既存の逆コンパイラはしばしば分かりにくいソースコードを出力する。
-そこで、我々は統計的機械翻訳の技術を逆コンパイラに用いて、解析者にとってわかりやすいソースコードを出力するような逆コンパイラを提案する。
-この論文では、機械翻訳において有用とされる Attention 付き Reccurent Neural Netowk を用いる。
-我々はまず、オープンソースプロジェクトからソースコードを収集し、コンパイラを用いて学習用のソースコードとバイナリデータの組を生成した。
-そして、そのデータを用いてネットワークのトレーニングを行い、手法の性能を検証した。
+様々な逆コンパイラが存在するが、既存の逆コンパイラはしばしば人間にとって分かりにくいソースコードを出力する。
+そこで本論文では、統計的機械翻訳の技術を逆コンパイラに用いた、解析者にとってわかりやすいソースコードを出力する逆コンパイラを提案する。
+具体的には、機械翻訳において有用とされる注意機構付き再帰型ニューラルネットワークを用いる。
+実験では、オープンソースプロジェクトから収集したソースコードとそのバイナリデータを用いてニューラルネットワークを学習し、その性能を検証した。
 \end{jabstract}
 
 \maketitle
