--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -1,15 +1,91 @@
+@INPROCEEDINGS{
+	Motoneta,
+author = {D. S. Katz and J. Ruchti and E. Schulte},
+booktitle = {2018 IEEE 25th International Conference on Software Analysis, Evolution and Reengineering (SANER)},
+title = {Using recurrent neural networks for decompilation},
+year = {2018},
+volume = {00},
+number = {},
+pages = {346-356},
+keywords={Recurrent neural networks;Tools;Training;Binary codes;Natural languages;Decoding;Data models},
+doi = {10.1109/SANER.2018.8330222},
+url = {doi.ieeecomputersociety.org/10.1109/SANER.2018.8330222},
+ISSN = {},
+month={March}
+}
+
+
+
 @article{
+	deep_programming_matome,
+  author    = {Neel Kant},
+  title     = {Recent Advances in Neural Program Synthesis},
+  journal   = {CoRR},
+  volume    = {abs/1802.02353},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.02353},
+  archivePrefix = {arXiv},
+  eprint    = {1802.02353},
+  timestamp = {Mon, 13 Aug 2018 16:46:30 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1802-02353},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+
+
+@inproceedings{
 	name_recover_from_decompile_result,
-	author = {
-		A. Jaffe and
-		J. Lacomis and
-		E. J. Schwartz and
-		C. L. Goues and
-		B. Vasilescu
-	},
-	title = {Meaningful Variable Names for Decompiled Code: A Machine Translation Approach},
-	journal = {IEEE/ACM International Conference on Program Comprehension},
-	year = {2018}
+ author = {Jaffe, Alan and Lacomis, Jeremy and Schwartz, Edward J. and Goues, Claire Le and Vasilescu, Bogdan},
+ title = {Meaningful Variable Names for Decompiled Code: A Machine Translation Approach},
+ booktitle = {Proceedings of the 26th Conference on Program Comprehension},
+ series = {ICPC '18},
+ year = {2018},
+ isbn = {978-1-4503-5714-2},
+ location = {Gothenburg, Sweden},
+ pages = {20--30},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/3196321.3196330},
+ doi = {10.1145/3196321.3196330},
+ acmid = {3196330},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{
+	JSNaughty,
+ author = {Vasilescu, Bogdan and Casalnuovo, Casey and Devanbu, Premkumar},
+ title = {Recovering Clear, Natural Identifiers from Obfuscated JS Names},
+ booktitle = {Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
+ series = {ESEC/FSE 2017},
+ year = {2017},
+ isbn = {978-1-4503-5105-8},
+ location = {Paderborn, Germany},
+ pages = {683--693},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/3106237.3106289},
+ doi = {10.1145/3106237.3106289},
+ acmid = {3106289},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Deobfuscation, JavaScript, Statistical Machine Translation},
+} 
+
+
+@InProceedings{
+	genetic_decompiler,
+  author =       "Eric Schulte and Jason Ruchti and Matt Noonan and 
+                 David Ciarletta and Alexey Loginov",
+  title =        "Evolving Exact Decompilation",
+  booktitle =    "Workshop on Binary Analysis Research",
+  year =         "2018",
+  editor =       "Yan Shoshitaishvili and Ruoyu (Fish) Wang",
+  address =      "San Diego, CA, USA",
+  month =        feb # " 18-21",
+  keywords =     "genetic algorithms, genetic programming, SBSE",
+  URL =          "http://www.cs.unm.edu/~eschulte/data/bed.pdf",
+  size =         "11 pages",
 }
 
 @misc{
